# gpu_raytracer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  build.rs
shader/: Cargo.toml
shader/src/: bvh.rs  intersection.rs  lib.rs  lighting.rs  material.rs  ray.rs  scene_access.rs  triangle_access.rs  wavefront.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: buffers.rs  bvh.rs  compute.rs  gltf_loader.rs  input.rs  main.rs  renderer.rs  scene.rs
