[package]
name = "raytracer_gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "=0.16.0", features = ["spirv", "vulkan-portability"] }
winit = "0.28.3"
pollster = "0.4"
bytemuck = { version = "1.19", features = ["derive"] }
glam = { version = "0.29", features = ["std"] }
env_logger = "0.11"
libm = "=0.2.10"
ahash = "=0.7.8"
wgpu-core = "=0.16.0"
wgpu-hal = "=0.16.0"
gpu-descriptor = "=0.2.0"
raytracer-shared = { path = "shared" }
gltf = { version = "1.4", features = [
    "KHR_materials_transmission", 
    "KHR_materials_ior", 
    "KHR_materials_specular",
    "KHR_materials_volume",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_lights_punctual",
    "extras", 
    "names"
] }
image = "0.24"
exr = { version = "=1.5.0" }
half = { version = "=1.8.3" }

[build-dependencies]
spirv-builder = { version = "0.9", features = ["watch", "use-installed-tools"], default-features = false }
libm = "=0.2.10"
ahash = "=0.7.8"

[patch.crates-io]
ahash = { git = "https://github.com/tkaitchuck/aHash.git", tag = "v0.7.8", version = "0.7.8" }
gpu-descriptor = { git = "https://github.com/zakarumych/gpu-descriptor.git", tag = "v0.2.0", version = "0.2.0"  }

[workspace]
members = ["shader", "shared"]

[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3